@@ -1,5 +1,9 @@
 # $Id$
 
+2007-04-28	Dmitry Pismenny
+
+	* core/Form/Filters/PCREFilter.class.php: limit added.
+
 2007-04-27	Dmitry Pismenny
 
 	* core/base/Session.class.php: minor styling.
